amdgpu_bo_free_kernel error
Brief summary of the problem:
Booting r6600 XT on 6.3.3 produces a cryptic dmesg warning: probably related to bug #2558 (closed), as that's where I came from, but applying the 6.3.2-3 patch
[ 40.567784] ------------[ cut here ]------------
[ 40.567786] WARNING: CPU: 23 PID: 283 at drivers/gpu/drm/amd/amdgpu/amdgpu_object.c:425 amdgpu_bo_free_kernel+0x18e/0x270 [amdgpu]
[ 40.567869] Modules linked in: amdgpu raid0 iwlmvm drm_buddy drm_ttm_helper ttm bcachefs mac80211 drm_display_helper btusb mean_and_variance libarc4 intel_rapl_msr intel_rapl_common gpu_sched btintel iosf_mbi polyval_clmulni polyval_generic drm_kms_helper sha512_ssse3 iwlwifi bluetooth gigabyte_wmi hid_generic atlantic rapl wmi_bmof i2c_piix4 ccp mpt3sas gpio_amdpt gpio_generic efivarfs
[ 40.567899] CPU: 23 PID: 283 Comm: kworker/23:1 Not tainted 6.3.3release+ #1
[ 40.567903] Hardware name: Gigabyte Technology Co., Ltd. X399 DESIGNARE EX/X399 DESIGNARE EX-CF, BIOS F13a 11/30/2021
[ 40.567905] Workqueue: pm pm_runtime_work
[ 40.567910] RIP: 0010:amdgpu_bo_free_kernel+0x18e/0x270 [amdgpu]
[ 40.567979] Code: 49 8b b5 30 01 00 00 f0 49 29 b4 24 38 39 01 00 e9 18 ff ff ff 49 8b 85 30 01 00 00 f0 49 29 84 24 40 39 01 00 e9 03 ff ff ff <0f> 0b 4d 8b 27 4d 8b ac 24 a8 01 00 00 e9 94 fe ff ff 81 f9 00 fe
[ 40.567982] RSP: 0018:ffffc90000e47680 EFLAGS: 00010202
[ 40.567985] RAX: ffff8883019c0010 RBX: 0000000000000000 RCX: 000000000000000c
[ 40.567987] RDX: 0000000000000000 RSI: 0000000000000000 RDI: ffff8883019c61a8
[ 40.567989] RBP: ffffc90000e47a60 R08: ffff8883019c0010 R09: 0000000000000001
[ 40.567991] R10: 0000000000000000 R11: 0000000000000000 R12: ffff888182fba400
[ 40.567992] R13: ffff8883019c5558 R14: 0000000000000000 R15: ffff8883019c61a8
[ 40.567994] FS: 0000000000000000(0000) GS:ffff889ffedc0000(0000) knlGS:0000000000000000
[ 40.567996] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 40.567999] CR2: 00007fd7adddc7f0 CR3: 000000006e209000 CR4: 00000000003506e0
[ 40.568001] Call Trace:
[ 40.568002] <TASK>
[ 40.568004] ? amdgpu_dm_atomic_commit_tail+0x2b64/0x2c30 [amdgpu]
[ 40.568081] ? console_flush_all+0x11c/0x380
[ 40.568086] ? get_page_from_freelist+0xd77/0xdb0
[ 40.568091] ? vprintk_emit+0xc0/0x1b0
[ 40.568094] ? _printk+0x46/0x50
[ 40.568097] ? __alloc_pages+0x137/0x230
[ 40.568101] ? new_slab+0x10b/0x3b0
[ 40.568104] ? slab_post_alloc_hook+0x60/0x200
[ 40.568109] ? complete_all+0x16/0x80
[ 40.568113] ? commit_tail+0x9d/0x200 [drm_kms_helper]
[ 40.568120] ? drm_dp_mst_atomic_wait_for_dependencies+0x130/0x130 [drm_display_helper]
[ 40.568127] ? drm_atomic_helper_commit+0x26a/0x280 [drm_kms_helper]
[ 40.568134] ? drm_atomic_commit+0x89/0xa0
[ 40.568137] ? ___drm_dbg+0x80/0x80
[ 40.568141] ? drm_atomic_helper_disable_all+0x149/0x190 [drm_kms_helper]
[ 40.568148] ? drm_atomic_helper_suspend+0x92/0x140 [drm_kms_helper]
[ 40.568155] ? dm_suspend+0x269/0x420 [amdgpu]
[ 40.568223] ? delay_halt+0x2c/0x50
[ 40.568226] ? gfx_v10_0_set_safe_mode+0x2ff/0x490 [amdgpu]
[ 40.568293] ? amdgpu_device_ip_suspend_phase1+0x221/0x280 [amdgpu]
[ 40.568361] ? amdgpu_device_suspend+0x166/0x2a0 [amdgpu]
[ 40.568428] ? amdgpu_pmops_runtime_suspend+0xb8/0x1b0 [amdgpu]
[ 40.568496] ? pci_pm_resume_noirq+0x2b0/0x2b0
[ 40.568500] ? pci_pm_runtime_suspend+0xad/0x1e0
[ 40.568502] ? __rpm_callback+0xc0/0x470
[ 40.568506] ? update_load_avg+0x1bb/0x630
[ 40.568511] ? pci_pm_resume_noirq+0x2b0/0x2b0
[ 40.568513] ? rpm_suspend+0x554/0xab0
[ 40.568517] ? __switch_to+0x165/0x4d0
[ 40.568520] ? pick_next_task_fair+0x111/0x2d0
[ 40.568524] ? __switch_to_asm+0x3a/0x60
[ 40.568526] ? pm_runtime_work+0x7e/0x90
[ 40.568528] ? process_one_work+0x1d5/0x300
[ 40.568531] ? worker_thread+0x2dd/0x680
[ 40.568533] ? kthread+0x225/0x240
[ 40.568537] ? rcu_free_pool+0x120/0x120
[ 40.568539] ? kthreadd+0x2c0/0x2c0
[ 40.568542] ? ret_from_fork+0x1f/0x30
[ 40.568545] </TASK>
[ 40.568546] ---[ end trace 0000000000000000 ]---
Hardware description:
- CPU: Threadripper 2950X
- GPU: Advanced Micro Devices, Inc. [AMD/ATI] Navi 23 [Radeon RX 6600/6600 XT/6600M] [1002:73ff] (rev c1)
- System Memory: 128GB
- Display(s): no graphical interface, console only
- Type of Display Connection: VGA
System information:
- Distro name and Version: Distro name and Version: Gentoo Linux
- Kernel version: 6.3.3
- Custom kernel: bcachefs test kernel patched to 6.3.3
- AMD official driver version: N/A
How to reproduce the issue:
compile LTO kernel & install (config file in attachment + dmesg with decode_stacktrace)